customizando template tags

--- a/contatos/templates/contatos/listar.html
+++ b/contatos/templates/contatos/listar.html
@@ -19,6 +19,7 @@
         <th>Nome</th>
         <th>Idade</th>
         <th>Site</th>
+        <th>Sexo</th>
         <th>Detalhes</th>
 
     </tr>
@@ -29,6 +30,7 @@
         <td>{{ i.nome }}</td>
         <td>{{i.idade}}</td>
         <td>{{i.site}}</td>
+        <td>{{i.sexo}}</td>
         <td><a href="{%url 'par' i.id %}">Ver Detalhes</a></td>
 
 
