Adicionando rest framkework consertado

--- a/contatos/templates/contatos/listar.html
+++ b/contatos/templates/contatos/listar.html
@@ -11,7 +11,7 @@
 {% endif %}
 <a href="/contatos/adicionar" class="btn btn-success">Adicionar</a>
 <a href="/contatos/addcsv" class="btn btn-success">Adicionar CSV</a>
-
+<a href="/api/pessoas" class="btn btn-info">API REST</a>
 
 <table class="table table-hover">
     <tr>
